--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
   celery:
     build:
       context: .
-      dockerfile: ./docker/CeleryDockerfile
+      dockerfile: ./Docker/CeleryDockerfile
     container_name: celery_container
     depends_on:
       - db
@@ -40,7 +40,7 @@ services:
     restart: always
     build:
       context: .
-      dockerfile: ./docker/Dockerfile
+      dockerfile: ./Docker/Dockerfile
     image: app
     container_name: app_container
     depends_on:
