--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,56 +1,41 @@
 version: '3'
 
 services:
-  db:
-    image: postgres:14-alpine3.17
-    container_name: db_app
-    env_file:
-      - .env
-    volumes:
-      - ./data/db:/var/lib/postgresql/data
+  django:
+    build:
+      context: ./
+      dockerfile: ./Docker/Django/Dockerfile
     ports:
-      - "5432:5432"
-    healthcheck:
-      test: ['CMD-SHELL', 'pg_isready']
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - "8000:8000"
+    env_file: .env
+    depends_on:
+      - postgres
+      - redis
+
+  postgres:
+    build:
+      context: ./
+      dockerfile: ./Docker/PostgreSQL/Dockerfile
+    env_file: .env
 
   redis:
-    image: redis:7.0.2-alpine
-    container_name: redis_app
-    command: redis-server --save 20 1 --loglevel warning
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./data/cache:/data
+    build:
+      context: ./
+      dockerfile: ./Docker/Redis/Dockerfile
 
   celery:
     build:
-      context: .
-      dockerfile: ./Docker/CeleryDockerfile
-    container_name: celery_container
+      context: ./
+      dockerfile: ./Docker/Celery/Dockerfile
+    command: "celery -A config worker -l info --queues=fila1"  # Обновите эту строку
     depends_on:
-      - db
+      - django
       - redis
-    env_file:
-      - .env
+      - postgres
+    restart: on-failure
+    networks:
+      - live
 
-  app:
-    restart: always
-    build:
-      context: .
-      dockerfile: ./Docker/Dockerfile
-    image: app
-    container_name: app_container
-    depends_on:
-      - db
-      - redis
-      - celery
-    env_file:
-      - .env
-    ports:
-      - "8000:8000"
-    volumes:
-      - .:/app
-    command: bash -c "python3 manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"
+
+networks:
+  live:
