--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,41 +1,51 @@
-version: '3'
+version: '3.9'
 
 services:
-  django:
-    build:
-      context: ./
-      dockerfile: ./Docker/Django/Dockerfile
-    ports:
-      - "8000:8000"
-    env_file: .env
-    depends_on:
-      - postgres
-      - redis
-
-  postgres:
-    build:
-      context: ./
-      dockerfile: ./Docker/PostgreSQL/Dockerfile
-    env_file: .env
-
   redis:
-    build:
-      context: ./
-      dockerfile: ./Docker/Redis/Dockerfile
+    image: redis
+    ports:
+      - "6379:6379"
+
+  app:
+    build: .
+    command: >
+	      bash -c "python manage.py makemigrations
+	      && python manage.py migrate
+	      && python manage.py runserver 0.0.0.0:8000"
+    ports:
+      - "8001:8000"
+    depends_on:
+      - db
+
+  db:
+    restart: always
+    image: postgres
+    env_file:
+      - .env
+    volumes:
+      - pg_data:/var/lib/postgresql/data/pgdata
+    expose:
+      - '5432'
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   celery:
-    build:
-      context: ./
-      dockerfile: ./Docker/Celery/Dockerfile
-    command: "celery -A config worker -l info --queues=fila1"  # Обновите эту строку
+    build: .
+    restart: always
+    command: celery -A config worker -l INFO
     depends_on:
-      - django
       - redis
-      - postgres
-    restart: on-failure
-    networks:
-      - live
+      - app
 
+  celery_beat:
+    build: .
+    command: celery -A config beat -l INFO -S django
+    depends_on:
+      - redis
+      - app
 
-networks:
-  live:
+volumes:
+  pg_data:
