--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,19 +3,23 @@ version: '3.9'
 services:
   redis:
     image: redis
-    ports:
-      - "6379:6379"
+    networks:
+      - mynetwork
 
   app:
-    build: .
-    command: >
-      bash -c "python manage.py makemigrations
-      && python manage.py migrate
-      && python manage.py runserver 0.0.0.0:8000"
+    build:
+      context: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/app
     ports:
-      - "8001:8000"
+      - "8000:8000"
+    env_file:
+      - .env
     depends_on:
       - db
+    extra_hosts:
+      - "db:172.22.0.2"
 
   db:
     restart: always
@@ -31,6 +35,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - mynetwork
 
   celery:
     build: .
@@ -39,6 +45,8 @@ services:
     depends_on:
       - redis
       - app
+    networks:
+      - mynetwork
 
   celery_beat:
     build: .
@@ -46,6 +54,12 @@ services:
     depends_on:
       - redis
       - app
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
 
 volumes:
   pg_data:
